--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,12 +2,20 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"name": "Launch localhost with sourcemaps",
+			"name": "Launch with sourcemaps",
 			"type": "chrome",
 			"request": "launch",
 			"url": "http://127.0.0.1:8080/index.html",
 			"sourceMaps": true,
-			"webRoot": "${workspaceRoot}/wwwroot"
-		}
+			"webRoot": "${workspaceRoot}"
+		},
+        {
+            /* need to run chome with command line --remote-debugging-port=9222 */
+            "name": "Attach with sourcemaps",
+            "type": "chrome",
+            "request": "attach",
+            "port": 9222,
+            "sourceMaps": true
+        }
 	]
 }
