--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "module": "amd",
         "sourceMap": true,
+        "outFile": "./build.js",
         "watch": true
     }
 }
