--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,9 @@
         "outFile": "./build.js",
         "watch": true,
         "noEmitOnError": true
-    }
+    },
+    "exclude": [
+        "node_modules",
+        "**/*.spec.ts"
+    ]
 }
