Bears tigers and modules, oh my!
Browser needs to use module because getting tsc
to output to a single JS file was getting too complicated.
That means we need a web server instead of using file://

Switch typescript away from namespaced modules.
Make sure to use .js extension for the browser resolution.

Create vscode background task that runs server and watch compiles

Update vscode browser launch away from deprecated chrome.
Use --app on launch for tabless frame

Set up vscode jasmine testing

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,20 +2,13 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch with sourcemaps",
-      "type": "chrome",
+      "name": "Launch Chrome",
       "request": "launch",
-      "sourceMaps": true,
-      "webRoot": "${workspaceRoot}",
-      "file": "${workspaceFolder}/index.html"
-    },
-    {
-      /* need to run chome with command line --remote-debugging-port=9222 */
-      "name": "Attach with sourcemaps",
-      "type": "chrome",
-      "request": "attach",
-      "port": 9222,
-      "sourceMaps": true
+      "type": "pwa-chrome",
+      "url": "http://localhost:8088",
+      "webRoot": "${workspaceFolder}",
+      "preLaunchTask": "parallel_watch_serve",
+      "runtimeArgs": ["--app=http://localhost:8088"]
     }
   ]
 }
