--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
   "files.exclude": {
     "**/*.js": {"when": "$(basename).ts"},
     "**/*.js.map": true
-  }
+  },
+  "jasmineExplorer.nodeArgv": ["-r", "ts-node/register"]
 }
