--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,18 +11,44 @@
 {
   "version": "2.0.0",
 
-  "command": "tsc",
-
-  "args": [],
+  "command": "npx",
 
   "problemMatcher": "$tsc",
   "tasks": [
     {
       "label": "tsc",
       "type": "shell",
-      "command": "tsc",
+      "command": "npx",
+      "args": ["tsc"],
       "problemMatcher": "$tsc",
       "group": "build"
+    },
+    {
+      "label": "parallel_watch_serve",
+      "type": "shell",
+      "isBackground": true,
+      "command": "npm run dev",
+
+      // https://stackoverflow.com/a/54017304/771768
+      "problemMatcher": [
+        {
+          "owner": "typescript",
+          "fileLocation": "relative",
+          "pattern": {
+            "regexp": "^([^\\s].*)\\((\\d+|\\d+,\\d+|\\d+,\\d+,\\d+,\\d+)\\):\\s+(error|warning|info)\\s+(TS\\d+)\\s*:\\s*(.*)$",
+            "file": 1,
+            "location": 2,
+            "severity": 3,
+            "code": 4,
+            "message": 5
+          },
+          "background": {
+            "activeOnStart": true,
+            "beginsPattern": ".",
+            "endsPattern": ".",
+          }
+        }
+      ]
     }
   ]
 }
