--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "build": "tsc",
     "test": "ts-node -P spec/tsconfig.json node_modules/jasmine/bin/jasmine",
-    "buildtest": "npm run build && npm test"
+    "buildtest": "npm run build && npm test",
+    "watch": "tsc -w",
+    "serve": "static-server -p 8088",
+    "dev": "npm-run-all --parallel watch serve"
   },
   "repository": {
     "type": "git",
@@ -22,6 +25,8 @@
   "devDependencies": {
     "@types/jasmine": "^3.8.1",
     "jasmine": "^3.8.0",
+    "npm-run-all": "^4.1.5",
+    "static-server": "^2.2.1",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
