--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "module": "amd",
     "lib": ["DOM", "ES2015"],
-    "target": "es5",
+    "target": "ES6",
     "sourceMap": true,
-    "outFile": "./build.js",
+    "outDir": "dist",
+    // "noImplicitAny": true,
+    // "noImplicitReturns": true,
+    // "strict": true,
     "noEmitOnError": true
   },
   "exclude": ["spec/"]
