--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "dist",
     // "noImplicitAny": true,
     // "noImplicitReturns": true,
-    // "strict": true,
+    "strict": true,
     "noEmitOnError": true
   },
   "exclude": ["spec/"]
